# VectorForgeV1

./: .dockerignore  .gitignore  README.md  pyproject.toml
Vector-Forge Experiments/VectorForgeV1/frontend/: package.json  server.js
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  sample_problemstatement.json
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/db/: __init__.py  connection.py
backend/app/routers/: __init__.py  auth.py  billing.py  health.py  settings.py  workflow.py  workspaces.py
backend/app/schemas/: auth.py  workflow.py  workspace.py
backend/app/services/: auth_service.py  billing_service.py  demo_data.py  experiment_results_stream.py  settings_service.py  workspace_service.py
backend/conversational/: .env.example  .gitignore  Conversational-PRD.md  Dockerfile  README.md  REDIS_CONTRACT.md  config.py  conv-output-schema.json  main.py  pyproject.toml  test-rag.md  test.md
backend/conversational/api/: routes.py
backend/conversational/dataset/: enriched_telecom_churn-2.csv
backend/conversational/graph/: checkpointer.py  graph.py  state.py
backend/conversational/graph/nodes/: dataset_sourcing.py  decomposer.py  discovery.py  intake.py  output_compiler.py
backend/conversational/models/: problem_taxonomy.yaml  schemas.py
backend/conversational/scripts/: read_redis_output.py
backend/conversational/services/: exa_search.py  llm.py  redis_cache.py  s3.py
backend/modelbuilder/: Dockerfile  README.md  app.py  dashboard_experiment_results_initial.json  pyproject.toml
backend/modelbuilder/examples/: research_paper_rag_conversation_output.json  telecom_churn_and_research_rag_conversation_output.json  telecom_churn_conversation_output.json
backend/modelbuilder/scripts/: test_orchestrate_from_session.py
backend/modelbuilder/src/vectorforge_v1/: llm_gateway.py  test_redis_stream.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/: __init__.py  artifact_resolver.py  config.py  contract.py  narrative.py  packager.py  registry.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/api/: routes.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/deploy/: __init__.py  docker_runner.py  resolver.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/generators/: autogluon.py  autorag.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/sandbox/: contract.py  local_runner.py  opensandbox_runner.py  vercel_runner.py
backend/modelbuilder/src/vectorforge_v1/artifact_forge/templates/: infer_autogluon.py.tmpl  infer_autorag.py.tmpl  model_interface.py.tmpl  readme.md.tmpl  train_autogluon.py.tmpl  train_autorag.py.tmpl
backend/modelbuilder/src/vectorforge_v1/artifact_forge/workflow/: graph.py  nodes.py  routes.py  state.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/gen_ai/autorag/: __main__.py  agentic_autorag.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/: .env.example  README.md  __init__.py  config.py  main.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/api/: config.py  runs.py  workflow.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/samples/: churn_tiny.csv
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/schemas/: requests.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/services/: artifacts.py  planner.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/workflow/: routes.py  state.py
backend/modelbuilder/src/vectorforge_v1/exp_designer/trad_ml/autogluon/workflow/nodes/: confirmation.py  failure.py  finalization.py  planning.py  profiling.py
backend/modelbuilder/src/vectorforge_v1/orchestrator/: __init__.py  redis_store.py  runner.py
backend/modelbuilder/src/vectorforge_v1/utils/: elasticache_pubsub.py  s3_down.py
backend/modelbuilder/tests/: test_autorag_model_resolution.py
db/: README.md  init_db.py  schema.sql
docs/: developer-evaluation-guide.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/model-builder/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/generating-artifact/: page.tsx
frontend/app/login/: page.tsx
frontend/app/run-workflow/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/artifacts/: generating-artifact-page.tsx
frontend/components/brand/: forge-ai-icon.tsx
frontend/components/cards/: data-preview-card.tsx  data-source-card.tsx  data-upload-card.tsx  decomposer-card.tsx  deployment-card.tsx  discovery-card.tsx  usecase-plan-card.tsx
frontend/components/chat/: billing-details.tsx  chat-thread.tsx  composer.tsx  dataset-details.tsx  messages.tsx  model-details.tsx  project-details.tsx  settings-details.tsx  use-case-details.tsx  workspace-details.tsx
frontend/components/shell/: inspector.tsx  sidebar.tsx  top-bar.tsx  user-menu-button.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts  modelbuilder.ts  types.ts
src/: s3_down.py
src/vectorforge_v1/exp_designer/gen_ai/autorag/: agentic_autorag.py
src/vectorforge_v1/exp_designer/trad_ml/autogluon/: README.md  __main__.py  config.py  main.py
src/vectorforge_v1/exp_designer/trad_ml/autogluon/api/: config.py  runs.py
src/vectorforge_v1/exp_designer/trad_ml/autogluon/schemas/: planner_outputs.py
src/vectorforge_v1/exp_designer/trad_ml/autogluon/services/: autogluon_runner.py  evaluator.py  planner.py  profiler.py  summarizer.py
src/vectorforge_v1/exp_designer/trad_ml/autogluon/workflow/: graph.py  routes.py  (+1 more)
src/vectorforge_v1/orchestrator/: runner.py
(+5 files in other folders)
