[project]
name = "forge-ai-backend"
version = "0.1.0"
description = "Mock FastAPI backend for the Forge AI demo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.2.2",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false
