[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vforge-conversational"
version = "1.0.0"
description = "VectorForge stateful conversational API — LangGraph + AutoGluon + AutoRAG"
readme = "Conversational-PRD.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # LangGraph — pinned to match root VectorForge env
    "langgraph==1.2.2",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt>=1.1.0",

    # PostgreSQL checkpointer (new — not in root env)
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",

    # FastAPI stack — versions confirmed in requirements.txt
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=1.0.0",
    "python-multipart>=0.0.20",

    # LLM — Vercel AI Gateway via OpenAI SDK v2
    "openai>=2.0.0",

    # Config + validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # AWS S3
    "boto3>=1.34.0",

    # HTTP client — Exa dataset search
    "httpx>=0.27.0",

    # Problem taxonomy loader
    "pyyaml>=6.0.0",
]

[project.scripts]
# Start the API server
vforge-api = "conversational.main:app"

[project.urls]
Repository = "https://github.com/shrgupta5/vforge"

# ── uv dependency groups (dev / test — not included in wheel) ───────────────
# Install with: uv sync --group dev
[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",       # AsyncClient for API tests
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
    "types-boto3>=1.0.0",
]

# ── uv project settings ──────────────────────────────────────────────────────
[tool.uv]
# Keep conversational venv isolated from the root VectorForge environment.
# Run `uv sync` from VectorForge/conversational/ — not from VectorForge/.
package = true

[tool.hatch.build.targets.wheel]
packages = ["conversational"]

# ── linting ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ── type checking ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true   # langgraph stubs not always available

# ── tests ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
